# ncbi_mesh_parser

./: README.md  pyproject.toml
ncbi_mesh_parser/: desc_parser.py
